Fixed button layout issue

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -336,7 +336,10 @@ button {
     display: inline;
 }
 
-
+#join-chamber-button {
+    margin-top: 1rem;
+    display: block;
+}
 
 .columns {
     display: flex;
